<resources>
    <string name="app_name">To Do</string>

    <string name="title_activity_login">Login in</string>

    <!-- Strings related to login and registration -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_login">Login</string>
    <string name="action_login_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="prompt_username">Username</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="register">Don\'t have an account? Sign up</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_home">To Do</string>

    <string name="title_menu_item_help_and_settings">Help &amp; Settings</string>
    <string name="title_nav_account">Account</string>
    <string name="title_nav_notes">Notes</string>
    <string name="title_nav_sign_out">Sign out</string>

    <!-- Strings related to note -->
    <string name="action_add_note">Add Note</string>
    <string name="action_edit_note">Edit Note</string>


    <!-- Network Alert strings -->
    <string name="network_alert_title">Internet not available!</string>
    <string name="network_alert_description">Please check your network connectivity</string>

    <string name="Priority_Select"></string>

    <!-- Spinner Array -->
    <string-array name="priority_array">
        <item>Low</item>
        <item>High</item>
    </string-array>

</resources>